--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -1,4 +1,3 @@
 {
-    "welcomeMessage": "Welcome to Page 1!",
-    "description": "This is an English description."
+    "welcomeMessage": "你好，这里是页面 "
 }
